--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,26 @@ body {
     overflow-x: hidden;
 }
 
+a{
+    text-decoration: none;
+    color: rgb(79, 230, 230);
+    padding: 0;
+    margin: 0;
+}
+
+
+/* 
+Header
+*/
+
 .header {
     width: 100%;
-    height: 100px;
+    height: 15vh;
     display: flex;
     justify-content: space-between;
-    background-color: #004c4c ;
+    background-color: #003135;
+    position: fixed;
+    z-index: 100;
 }
 
 .headerlinks {
@@ -37,14 +51,13 @@ body {
     justify-content: space-between;
     text-align: center;
     font-size: 30px;
+    font-weight: 500;
     align-items: center;
     margin: 30px;
-
 }
 
-a{
-    text-decoration: none;
-    color: rgb(79, 230, 230);
+.logoWrapper {
+    display: flex;
 }
 
 .logo {
@@ -53,18 +66,33 @@ a{
     align-self: flex-end;
 }
 
-.hero {
+
+
+/* 
+Hero Section
+*/
+#Hero {
+    height: 100vh; 
+    width: 100%;
+    background: white;
+    position: relative;
+}
+
+.heroContent {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    height: 800px;
+    height: 85vh;
+    background: rgb(180, 220, 236);
     align-items: center;
+    position: fixed;
+    margin-top: 15vh;
 }
 
 .hero-image {
-    width: 400px;
     height: 500px;
-    display: flex;
+    margin-left: -7rem;
+    margin-right: -5rem;
 }
 
 .hero-text {
@@ -74,6 +102,7 @@ a{
     margin-left: 70px;
     font-size: 30px;
     line-height: 1.3;
+    max-width: 40%;
 }
 
 .hero-text p{
@@ -82,24 +111,35 @@ a{
     margin-top: 0px;
 }
 
-.my-services {
-    background-color: #0caaaa;
+
+/* 
+Services Section
+*/
+
+#my-services {
+    position: relative;
+    /* background-color: #024950;
+    background-color: #964734; */
+    background-color: #116466;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 1200px;
+    height: max-content;
+    z-index: 2;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    gap: 4rem;
 }
 
-.my-services h2 {
+#my-services h2 {
     color: white;
-    margin-top: 160px;
     font-size: 45px;
+    text-align: center;
 }
 
 .services-list {
     width: 80%;
     display: flex;
-    margin-top: 120px;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -107,17 +147,17 @@ a{
     line-height: 0.2;
     text-align: center;
     flex-wrap: wrap;
-
+    gap: 2rem;
 }
+
  ul{
     list-style-type: none;
     display: flex;
     align-items: center;  
  }
 
-
 .item {
-    background-color: #016b6b70;
+    background-color: #01364b;
     height: 250px;
     width: 150px;
     display: flex;
@@ -125,24 +165,92 @@ a{
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
-    padding: 10px;
-    margin: 10px;
+    padding:1.5rem;
+    box-shadow: 0px 0px 72px 10px #003135;
 }
 .item-heading {
     font-size: 30px;
     line-height: 1;
+    font-weight: bold;
+    color: #b1f5f7;
 }
 
 .item-image {
     width: 150px;
 }
 
+
+/*
+Testimonials Section
+*/
+
+#Testimonials {
+    height: max-content;
+    background-color: #964734;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 4;
+    position: relative;
+    padding: 8rem;
+}
+
+#Testimonials h1 {
+    color: #87dadb;
+    text-align: center;
+}
+
+
+/* 
+CTA Section 
+*/
+#CTA {
+    position: relative;
+    height: 100vh;
+    z-index: 4; 
+    background-color: #116466;
+    background-image: url(Assets/ctaBG.jpg);
+    background-size: cover;
+    font-size: 4rem;
+    color: #01364b;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.ctaButton {
+    width: max-content;
+    height: max-content;
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    border: 2px solid #9fe9eb;
+    font-size: 2.5rem;
+    color: #9fe9eb;
+    transition: all 0.5s ease-out;
+    cursor: pointer;
+}
+
+.ctaButton:hover {
+    background-color: #9fe9eb;
+    color: #01364b;
+}
+
+
+
+
 footer {
-    background-color: #004c4c;
+    background-color: #006572;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100px;
     color: white;
     font-size: 25px;
+    z-index: 3;
 }
