--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ Hero Section
     font-size: 30px;
     line-height: 1.3;
     max-width: 40%;
+    color: #003135;
 }
 
 .hero-text p{
@@ -128,7 +129,7 @@ Services Section
     height: max-content;
     z-index: 2;
     padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-bottom: 10rem;
     gap: 4rem;
 }
 
