--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+
 @font-face {
     font-family: 'chill-writing';
     src: url('/Fonts/chill-writing/ShiftyNotesRegular-BWZ6d.ttf') format('truetype');
@@ -25,7 +27,7 @@ body {
     background-color: #ffffff ;
     margin: 0;
     padding: 0;
-    font-family: 'Lofilifestyle', sans-serif; 
+    font-family: 'Lofilifestyle', 'Amatic SC', sans-serif; 
     overflow-x: hidden;
 }
 
